<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bk_gray"
	android:orientation="vertical" >
	<RelativeLayout
		android:id="@+id/topBarMenu"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:background="@drawable/navbar" >
		<ImageButton
			android:id="@+id/monthBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="7dp"
			android:background="#0000"
			android:contentDescription="@string/month_btn"
			android:src="@drawable/btn_month"
			android:visibility="gone" />
		<TextView
			android:id="@+id/navbarTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:text="@string/alert_event_request_title"
			android:textColor="@color/white"
			android:textSize="26sp"
			android:textStyle="bold" />
		<ProgressBar
			android:id="@+id/progressBar1"
			style="?android:attr/progressBarStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="7dp"
			android:visibility="invisible" />
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/calendarMenu"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/topBarMenu"
		android:background="@drawable/bg_day_mover" >
		<ImageButton
			android:id="@+id/prevDay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="12dp"
			android:layout_marginTop="12dp"
			android:background="#0000"
			android:contentDescription="@string/left_arrow_btn"
			android:src="@drawable/cal_btn_left_arrow" />
		<TextView
			android:id="@+id/currentDay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/date_sample"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/blue_datetime"
			android:textSize="24sp"
			android:textStyle="bold" >
		</TextView>
		<ImageButton
			android:id="@+id/nextDay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="12dp"
			android:layout_marginTop="12dp"
			android:background="#0000"
			android:contentDescription="@string/right_arrow_btn"
			android:src="@drawable/cal_btn_right_arrow" />
	</RelativeLayout>
	<ListView
		android:id="@+id/calendarList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/bottomBarMenu"
		android:layout_below="@+id/calendarMenu" >
	</ListView>
	<RelativeLayout
		android:id="@+id/bottomBarMenu"
		android:layout_width="match_parent"
		android:layout_height="100dp"
		android:layout_alignParentBottom="true"
		android:background="@drawable/alerts_invite_box_bg" >
		<RelativeLayout
			android:id="@+id/bottomBarMenu_EventDescription"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#0000" >
			<RelativeLayout
				android:id="@+id/leftLayout"
				android:layout_width="70dip"
				android:layout_height="55dip"
				android:background="#0000" >
				<ImageView
					android:id="@+id/imageNote"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginLeft="20dp"
					android:layout_marginRight="5dp"
					android:contentDescription="@string/app_name"
					android:src="@drawable/avatar2x" />
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/centerLayout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/leftLayout" >
				<TextView
					android:id="@+id/alerts_events_title"
					style="@style/ATLTitleOfListView"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="5dp"
					android:textColor="@color/white"
					android:textSize="14sp"
					android:textStyle="normal" />
			</RelativeLayout>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true" >
			<ImageView
				android:id="@+id/preferImg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_marginBottom="10dp"
				android:contentDescription="@string/app_title"
				android:src="@drawable/calendar_editevent_alttimes_select_btn" />
			<TextView
				android:id="@+id/preferHour"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignLeft="@+id/preferImg"
				android:layout_alignRight="@+id/preferImg"
				android:layout_alignTop="@+id/preferImg"
				android:gravity="center"
				android:text="@string/calendar_edit_event_when_hour"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="14sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/preferDay"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/preferImg"
				android:layout_alignLeft="@+id/preferImg"
				android:layout_alignRight="@+id/preferImg"
				android:gravity="center"
				android:text="@string/calendar_edit_event_when_day"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="11sp" />
			<ImageView
				android:id="@+id/alt2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/preferImg"
				android:layout_marginLeft="7dp"
				android:layout_toRightOf="@+id/preferImg"
				android:contentDescription="@string/app_title"
				android:src="@drawable/calendar_editevent_alttimes_unselect_btn" />
			<TextView
				android:id="@+id/alt2Hour"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignLeft="@+id/alt2"
				android:layout_alignRight="@+id/alt2"
				android:layout_alignTop="@+id/alt2"
				android:gravity="center"
				android:text="@string/calendar_edit_atl_atl1_lable"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="14sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/alt2Day"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/alt2"
				android:layout_alignLeft="@+id/alt2"
				android:layout_alignRight="@+id/alt2"
				android:gravity="center"
				android:text="@string/calendar_edit_atl_select_time_lable"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="11sp" />
			<ImageView
				android:id="@+id/alt3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/preferImg"
				android:layout_marginLeft="7dp"
				android:layout_toRightOf="@+id/alt2"
				android:contentDescription="@string/app_title"
				android:src="@drawable/calendar_editevent_alttimes_unselect_btn" />
			<TextView
				android:id="@+id/alt3Hour"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignLeft="@+id/alt3"
				android:layout_alignRight="@+id/alt3"
				android:layout_alignTop="@+id/alt3"
				android:gravity="center"
				android:text="@string/calendar_edit_atl_atl2_lable"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="14sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/alt3Day"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@+id/alt3"
				android:layout_alignLeft="@+id/alt3"
				android:layout_alignRight="@+id/alt3"
				android:gravity="center"
				android:text="@string/calendar_edit_atl_select_time_lable"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textSize="11sp" />
			<ImageView
				android:id="@+id/saveBtn"
				android:layout_width="63dp"
				android:layout_height="36dp"
				android:layout_alignBottom="@+id/preferImg"
				android:layout_marginLeft="7dp"
				android:layout_toRightOf="@+id/alt3"
				android:contentDescription="@string/app_title"
				android:src="@drawable/alerts_task_request_decline_btn2x" />
			<ImageView
				android:id="@+id/cancelBtn"
				android:layout_width="63dp"
				android:layout_height="36dp"
				android:layout_alignBottom="@+id/preferImg"
				android:layout_marginLeft="7dp"
				android:layout_toRightOf="@+id/saveBtn"
				android:contentDescription="@string/app_title"
				android:src="@drawable/alerts_task_request_decide_later_btn2x" />
		</RelativeLayout>
	</RelativeLayout>
</RelativeLayout>